--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,24 @@
   text-align: center;
 }
 
+.board {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  border: solid 1px black;
+}
+
 .square {
-    background: #fff;
+  width: 100px;
+  height: 100px;
+  border: solid 2px black;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 70px;
+    /* background: #fff;
     border: 1px solid #999;
     float: left;
     font-size: 24px;
@@ -17,5 +33,5 @@
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 34px; */
 }
